[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqloader"
version = "0.2.3"
authors = [
  { name="horrible", email="shinjpn1@gmail.com" },
]
description = "A simple and extensible SQL migration and loader utility for Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "sqloader", "sql loader", "migration", "database migration",
    "MySQL", "SQLite", "SQL migration", "schema management",
    "json sql loader"
]
dependencies=['LogAssist', 'pymysql>=1.1.1']

[project.optional-dependencies]
postgresql = ["psycopg2-binary>=2.9.0"]
async-mysql = ["aiomysql>=0.2.0"]
async-postgresql = ["asyncpg>=0.27.0"]
async-sqlite = ["aiosqlite>=0.19.0"]
all = [
    "psycopg2-binary>=2.9.0",
    "aiomysql>=0.2.0",
    "asyncpg>=0.27.0",
    "aiosqlite>=0.19.0",
]

[project.urls]
"Homepage" = "https://github.com/horrible-gh/py_sqloader"
"Bug Tracker" = "https://github.com/horrible-gh/py_sqloader/issues"
